renamed to elementMass

--- a/docs/source/notebooks/usage.ipynb
+++ b/docs/source/notebooks/usage.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import elements as e"
+    "import elementMass as e"
    ]
   },
   {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculate atomic weights of multiple elements or compounds by supplying a list of names as the argument to compound_weights()"
+    "Calculate atomic weights of multiple elements or compounds by supplying a list of names as the argument to compound_weights(). Results are returned as a pandas Series."
    ]
   },
   {
@@ -80,12 +80,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get cation or oxygen amounts with cation_numbers() and oxygen_numbers() respectively. "
+    "Get cation or oxygen amounts with cation_numbers() and oxygen_numbers() respectively. Results are returned as a pandas Series."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "Name: cations, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "Name: oxygen, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,12 +132,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note cation_numbers() simply calculates the amount of the first listed element and therefore only gives reasonable results for simple oxides. It will not work on complex compounds:"
+    "Note that cation_numbers() simply returns the amount of the first listed element and therefore only gives reasonable results for simple oxides. It will not work on more complex compounds:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "Name: cations, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
